<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo_detail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_left_margin"
                android:layout_marginStart="@dimen/activity_left_margin"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/photo_detail"
                android:layout_toRightOf="@id/photo_detail"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/president_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:hint="President"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/jabatan_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:hint="Jabatan"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_left_margin"
            android:layout_marginRight="@dimen/activity_right_margin"
            android:layout_marginStart="@dimen/activity_left_margin"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:hint="@string/deskripsi" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_left_margin"
                android:layout_marginRight="@dimen/activity_right_margin"
                android:layout_marginStart="@dimen/activity_left_margin"
                android:layout_marginEnd="@dimen/activity_right_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin" >

                <TextView
                    android:id="@+id/lahir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lahir" />

                <TextView
                    android:id="@+id/tgl_lahir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_left_margin"
                    android:layout_marginStart="@dimen/activity_left_margin"
                    android:hint="@string/tanggal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_left_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_left_margin">

                <TextView
                    android:id="@+id/wafat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wafat" />

                <TextView
                    android:id="@+id/tgl_wafat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_left_margin"
                    android:layout_marginStart="@dimen/activity_left_margin"
                    android:hint="@string/tanggal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_left_margin"
                android:layout_marginRight="@dimen/activity_right_margin"
                android:layout_marginStart="@dimen/activity_left_margin"
                android:layout_marginEnd="@dimen/activity_right_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/tinggi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tinggi" />

                <TextView
                    android:id="@+id/tinggi_pres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_left_margin"
                    android:layout_marginStart="@dimen/activity_left_margin"
                    android:hint="@string/app_name" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>